sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:8: error: value -= is not a member of Int
      i-=1
       ^