sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var i:Int=0
  
  for(i<- 0 to getNombreValeurs-2){
    if(plusPetit(i,i+1)==false){
      echange(i,i+1)
      i-=1
    }
    
    
    
  }
  
  
}